# electrical

./: .gitignore  Git_GUI_Workshop.md  LEDscript.py  OOP_Python_GUI_Workshop.md  README.md  SoftwareNotes.txt  about.html  asset-manifest.json  colorSensor.c  comm.html  imu.c  index.html  longRange.c  make_data (1).py  package-lock.json  package.json  powsys.html  requirements.txt  sample_data.txt  sensors.html  shortDistance.c  state_pseudo.txt  state_testing  testing  zcm testing
ArduinoCode/: hallEffect_RPM.ino
ArduinoComms/: ArduinoComms.ino
Arduino_Training/: button_press.ino  button_press_starter_code.ino
Backend/: Hyperloop.c
ClientServerExample/: Client.cpp  client.py  server.py
Communications/: CommunicationsDocument.docx  CommunicationsDocument.md  communications_research.md
Cpp_Training/: result.txt  test.txt  tutorial.cpp  wordcount  wordcount.cpp  wordcount.py
Diagrams/: Arduino & Odroid Communication Diagram.docx  State Diagram Definitions.MD
FromHardwareRepo/: README.md
GUI/: Data.csv  README.md  constants.py  example.json  (+12 more)
State_Estimation/: CMakeLists.txt  state_estimation_research.md  statemachine.cpp  states.c  testStateMachine.cpp
State_Estimation/arduinoCode/: MPU6050Calibrate-Initialize.ino
State_Estimation/research/: state_estimation_research.md
State_Estimation/serial/: SerialClass.h  serialRead.cpp
State_Estimation/src/: LinuxSerialClass.cpp  MockSerialClass.h  Mockstatemachine.cpp  SerialClass.cpp  SerialClass.h  closeBrake.hpp  constants.hpp  helperFunctions.h  serialClassMac.h  serialRead.cpp  stateMachineFuncs.cpp  statemachine.cpp  statemachine.hpp  states.c  test.txt
State_Estimation/test/: googleTest.cpp  testStateMachine.cpp
State_Estimation/test_StateMachine/: CMakeLists.txt  MockSerial.h  _test.cc  constants.hpp  statemachine.cpp  test_Serial.cpp  test_StateMachine.cpp
State_Estimation/test_project/: CMakeLists.txt
(+340 files in other folders)
